# software-design-python

./: .dockerignore  .editorconfig  .env-example  .gitignore  Makefile  Readme.md  app.py  classes_restaurant_app.plantuml  cli.ps1  config.py  entrypoint.sh  initial_restaurant_data.json  links.txt  packages_restaurant_app.plantuml  pyproject.toml  requirements.txt  run_app.py
container/: Dockerfile  compose.yaml  create-db-RESTAURANTS.sql
doc/: classes_restaurant_app.plantuml  packages_restaurant_app.plantuml
restaurant/: root_views.py
restaurant/infrastructure/: container.py
restaurant/services/: restaurant.py
restaurant_app/: __init__.py  cli.py  development_config.yaml  production_config.yaml
restaurant_app/infrastructure/: config.py  container.py  logger.py
restaurant_app/restaurant/: root_views.py
restaurant_app/restaurant/services/: restaurant.py
restaurant_app/store/: database.py  models.py  restaurant_repository.py  restaurant_repository_test.py
src/: .env-example  print_database_DDL.py
src/restaurant_app/: __init__.py  development_config.yaml  production_config.yaml
src/restaurant_app/auth/: models.py  views.py
src/restaurant_app/cli/: database.py
src/restaurant_app/infrastructure/: cache.py  config.py  container.py  environment.py  memory_cache.py  memory_cache_test.py
src/restaurant_app/reservation/: forms.py  models.py  service.py  views.py  (+2 more)
static/css/: custom.css
templates/: _formhelpers.html  _layout.html
templates/auth/: login.html
templates/reservation/: index.html
templates/restaurant/: detail.html  index.html
(+35 files in other folders)
