[project]
name = "restaurant-app"
version = "0.0.1"
dependencies = [
    "Flask>=3.1.0",
    "dependency-injector>=4.44.0",
    "pytest>=8.3.4",
    "sqlalchemy>=2.0.36",
    "Flask-Pydantic>=0.12.0",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2",
    "pytest-cov>=6.0.0",
    "marshmallow>=3.23.1",
    "marshmallow-dataclass>=8.7.1",
    "flask-wtf>=1.2.2",
    "pylint>=3.3.2",
]
requires-python = ">=3.12"
authors = [
    {name = "Henrik Binggl", email = "hbinggl.lba@fh-salzburg.ac.at"}
]
maintainers = [
    {name = "Henrik Binggl", email = "hbinggl.lba@fh-salzburg.ac.at"},
]
description = "A sample Flask application showcasing a restaurant reservation system"
readme = "Readme.md"
license = {file = "LICENSE"}
keywords = ["python", "flask", "restaurant", "software-design", "FH Salzburg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

[project.urls]
Homepage = "https://its-git.fh-salzburg.ac.at/hbinggl/software-design-python"
Repository = "https://its-git.fh-salzburg.ac.at/hbinggl/software-design-python"

[tool.coverage.run]
source = ["restaurant_app"]

